force-app/main/default/objects/Account_Enrichment_Config__mdt/Account_Enrichment_Config__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type storing configuration for the Account enrichment API callout service.</description>
    <label>Account Enrichment Config</label>
    <pluralLabel>Account Enrichment Configs</pluralLabel>
</CustomObject>