force-app/main/default/objects/Account_Enrichment_Config__mdt/fields/API_Endpoint_Path__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint_Path__c</fullName>
    <description>Relative path appended to the Named Credential base URL for the enrichment API endpoint (e.g. /v1/enrich).</description>
    <label>API Endpoint Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>