force-app/main/default/objects/Account_Enrichment_Config__mdt/fields/Endpoint_Path__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Path__c</fullName>
    <description>Relative path appended to the Named Credential base URL (e.g. /v1/enrich).</description>
    <label>Endpoint Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>