force-app/main/default/objects/Account_Enrichment_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this configuration record is used by the enrichment service. Only one record should be active at a time.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>