force-app/main/default/objects/Account_Enrichment_Config__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>API name of the Named Credential used to authenticate callouts to the enrichment API.</description>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>