force-app/main/default/objects/Account_Enrichment_Config__mdt/fields/Timeout_Milliseconds__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Milliseconds__c</fullName>
    <description>HTTP callout timeout in milliseconds for the enrichment API request.</description>
    <label>Timeout Milliseconds</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>